# ecs-topdown-engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: fragment.glsl  vertex.glsl
graphicslib/: CMakeLists.txt
graphicslib/libraries/include/glad/: glad.h
graphicslib/libraries/include/stb/: stb_image.h
graphicslib/shaders/basic/: fragment.glsl  vertex.glsl
graphicslib/shaders/flat/: fragment.glsl  vertex.glsl
graphicslib/shaders/texture/: fragment.glsl  vertex.glsl
graphicslib/src/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
libraries/glad/include/glad/: glad.h
libraries/graphicslib/include/: Camera.h  Mesh.h  Renderer.h  Shader.h  Texture.h  Window.h
libraries/graphicslib/src/: Camera.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Window.cpp
src/: Behaviours.cpp  Component.cpp  DeltaTime.cpp  Effects.cpp  Entity.cpp  Events.cpp  Managers.cpp  Render.cpp  ResourceManager.cpp  Systems.cpp  main.cpp
src/headers/: Behaviours.h  Components.h  DeltaTime.h  Effects.h  Entity.h  Events.h  Managers.h  Render.h  ResourceManager.h  Systems.h
